[package]
name = "ocnus"
version = "0.1.0"
edition = "2024"

[lib]
name = "ocnus"
crate-type = ["lib"]


[dependencies]
chrono = "*"
derive_builder = "*"
derive_more = { version = "*", features = ["full"] }
itertools = "*"
log = "*"
nalgebra = { version = "*", features = ["rayon", "serde-serialize"] }
num-traits = "*"
rand = "*"
rand_chacha = "*"
rand_distr = "*"
rand_xoshiro = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
serde_json = "*"
serde_json5 = "*"
thiserror = "*"

[dev-dependencies]
criterion = "*"
directories = "*"
dyn-fmt = "*"
env_logger = "*"
plotters = "*"

[[bench]]
name = "cylm"
harness = false

[[bench]]
name = "corem"
harness = false

[[bench]]
name = "wsahux"
harness = false