[package]
name = "ocnus_coords"
version = "0.1.0"
edition = "2024"

[lib]
name = "ocnus_coords"

[dependencies]
chrono = "*"
derive_builder = "*"
derive_more = { version = "*", features = ["full"] }
itertools = "*"
log = "*"
nalgebra = { version = "*", features = ["rayon", "serde-serialize"] }
num-traits = "*"
ocnus_math = { path = "../ocnus_math" }
ocnus_stats = { path = "../ocnus_stats" }
rand = "*"
rand_distr = "*"
rand_xoshiro = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
serde_json5 = "*"
thiserror = "*"

