[package]
name = "ocnus_stats"
version = "0.1.0"
edition = "2024"

[lib]
name = "ocnus_stats"

[dependencies]
derive_more = { version = "*", features = ["full"] }
itertools = "*"
log = "*"
nalgebra = { version = "*", features = ["rayon", "serde-serialize"] }
rand = "*"
rand_distr = "*"
rand_xoshiro = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
serde_json5 = "*"
thiserror = "*"
