[package]
name = "ocnus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ocnus"
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
num-traits = "0.2.19"
numpy = "0.21.0"
pyo3 = "0.21.1"
quaternions = "0.5.0-a2"
